tests/baselines/reference/comparisonOperatorWithNumberOperand.errors.txt
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNumberOperand.ts(3,1): error TS2365: Operator '>=' cannot be applied to types 'number | Promise<number>' and 'number'.


==== tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNumberOperand.ts (1 errors) ====
    // repro #52036
    declare const t1: number | Promise<number>
    t1 >= 0 // error
    ~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'number | Promise<number>' and 'number'.
!!! related TS2773 tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNumberOperand.ts:3:1: Did you forget to use 'await'?
    